# negaverse

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ADDING-A-FILTER.md  ARCHITECTURE.md  BENCHMARK-FINDINGS.md  EDGE-CASES.md  EVALUATION.md  FILTER-EFFECTIVENESS.md  IG-FEATURES.md  IMPLEMENTATION-PLAN.md  INDUCTIVE-GENERALIZATION.md  SCOPE-AND-PLANNING.md  negaverse-architecture-diagram.html
negaverse/: __init__.py  candidates.py  cli.py  eval.py  fusion.py  graph.py  matching.py  pipeline.py  rule_engine.py  schema.py
rules/: AUTHORING.md  README.md  SOURCES.md  pli.yaml  ppi.yaml  sources.yaml
scripts/: af2_validate.py  bench_corrected.py  bench_dscript.py  bench_features_ablation.py  bench_inductive_generalization.py  bench_negaverse_vs_random.py  bench_paper_style.py  bench_rule_ablation_downstream.py  bench_rules.py  bench_verified_s7.py  build_ensg_symbol_map.py  build_esm2_embeddings.py  build_gene_alignments.py  build_gene_symbol_uniprot_map.py  build_go_process.py  build_huri_annotations.py  build_huri_surface_hydrophobicity.py  build_known_positive_sources.py  build_plinder_pli.py  build_showcase.py  build_uniprot_ensembl_map.py  calibrate_colocalization_threshold.py  calibrate_evolutionary_coupling_threshold.py  calibrate_hydrophobicity_threshold.py  compute_af2_multimer.py  compute_evolutionary_coupling.py  compute_hydrophobicity.py  compute_pocket_descriptors.py  compute_sars_viral_hydrophobicity.py  compute_string_experimental.py  compute_surface_hydrophobicity.py  convert_huintaf2.py  dryad_structure_separation.py  dscript_mps.py  (+21 more)
(+61 files in other folders)
