[project]
name = "negaverse"
version = "0.1.0"
description = "Matched, confidence-scored negative datasets from interaction graphs"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "networkx>=3.0",
    "scipy>=1.10",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# literature-reasoning stream (§5.2): pick one or both backends
llm = ["anthropic>=0.40", "httpx>=0.27"]
# downstream-model benchmark
bench = ["scikit-learn>=1.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["negaverse", "negaverse.streams", "negaverse.io", "negaverse.llm", "negaverse.bench"]
